fixed buttons alignment

--- a/themes/mytheme/assets/sass/styles.scss
+++ b/themes/mytheme/assets/sass/styles.scss
@@ -54,14 +54,15 @@
     max-height: 600px;
     width: auto;
     border: 2px solid #e3e3e3;
-    border-radius: 6px;
-    text-align: center !important;
-    justify-content: center !important;
-    align-items: center !important;
+    //border-radius: 6px;
+    text-align: center;
     position: relative;
     padding-bottom: 40px;
     margin-bottom: 60px;
     transform: translateZ(0px);
+    box-shadow: 5px 6px 7px 0px rgba(212,212,212,0.89);
+    -webkit-box-shadow: 8px 6px 11px 0px rgba(212,212,212,0.89);
+    -moz-box-shadow: 8px 6px 11px 0px rgba(212,212,212,0.89);
 }
 
 .pricingTable:before,
@@ -74,13 +75,13 @@
     right: -2px;
     z-index: -1;
     transition: all 0.5s ease 0s;
-    border-radius: 6px;
+    //border-radius: 6px;
 }
 
 .pricingTable:before{
     border-right: 2px solid #09ce40;
     border-left: 2px solid #09ce40;
-    border-radius: 6px;
+    //border-radius: 6px;
     transform: scaleY(0);
     transform-origin: 100% 0 0;
 }
@@ -88,7 +89,7 @@
 .pricingTable:after{
     border-bottom: 2px solid #09ce40;
     border-top: 2px solid #09ce40;
-    border-radius: 6px;
+    //border-radius: 6px;
     transform: scaleX(0);
     transform-origin: 0 100% 0;
 }
@@ -108,7 +109,7 @@
     color: black;
     margin: -2px -2px 35px;
     padding: 40px 0;
-    border-radius: 6px 6px 0px 0px;
+    //border-radius: 6px 6px 0px 0px;
 }
 
 .pricingTable .heading{
@@ -158,21 +159,21 @@
     line-height: 40px;
 }
 
-.pricingTable .read{
-    display:inline-block;
-    border: 2px solid #7a7e82;
-    border-right: none;
-    font-size: 14px;
+.btn-secondary{
+    font-size: 18px;
     font-weight: 700;
-    color: #7a7e82;
-    padding: 9px 30px;
-    position: absolute;
-    bottom: 20px;
-    margin: auto;
-    text-transform: uppercase;
+    color: white;
+    bottom: 15px;
+    position:absolute;
+    left: 0;
+    right: 0;
+    margin-left: 100px;
+    margin-right: 100px;
     transition: all 0.3s ease 0s;
-    text-align: center;
-    align-self: center;
+    border-radius: 20px;
+    box-shadow: 5px 6px 7px 0px rgba(212,212,212,0.89);
+    -webkit-box-shadow: 8px 6px 11px 0px rgba(212,212,212,0.89);
+    -moz-box-shadow: 8px 6px 11px 0px rgba(212,212,212,0.89);
 }
 
 .pricingTable .read:hover{
@@ -180,47 +181,15 @@
     color: #09ce40;
 }
 
-.pricingTable .read i{
-    font-size: 19px;
-    margin-top: -10px;
-    position: absolute;
-    top: 50%;
-    right: 15px;
-    transition: all 0.3s ease 0s;
-}
-
-.pricingTable .read:hover i{
-    right: 5px;
-}
-
-.pricingTable .read:before,
-.pricingTable .read:after{
-    content: "";
-    display: block;
-    height: 30px;
-    border-left: 2px solid #7a7e82;
-    position: absolute;
-    right: -11px;
-    transition: all 0.3s ease 0s;
-}
-
-.pricingTable .read:before{
-    bottom: -6px;
-    transform: rotate(45deg);
-}
-
-.pricingTable .read:after{
-    top: -6px;
-    transform: rotate(-45deg);
-}
-
-.pricingTable .read:hover:before,
-.pricingTable .read:hover:after{
-    border-left-color: #09ce40;
-}
 
 @media screen and (max-width: 990px){
-    .pricingTable{ margin-bottom: 25px; }
+    .pricingTable
+    { 
+        margin-bottom: 25px;
+        margin-left: 30px;
+        margin-right: 30px;
+
+    }
 }
 
 .accordion-item{
